--- a/templates/Sample.html
+++ b/templates/Sample.html
@@ -141,7 +141,7 @@
         <div id="app" class="months-box content">
             <header>
                 <i class="ph-bold ph-caret-left"></i>
-                <span>JANEIRO 2024</span>
+                <span></span>
                 <i class="ph-bold ph-caret-right"></i>
             </header>
             <main class="main-months">
