--- a/src/assets/css/module.css
+++ b/src/assets/css/module.css
@@ -1,5 +1,5 @@
 /* @import 'https://fonts.cdnfonts.com/css/digital-numbers'; */
-/* @import '//unpkg.com/boxicons@2.1.4/css/boxicons.min.css'; */
+@import '//unpkg.com/boxicons@2.1.4/css/boxicons.min.css';
 /* @import '//maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css'; */
 /* @import '//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css'; */
 @import '//unpkg.com/@phosphor-icons/web';
@@ -13,17 +13,4 @@
     --default-rentmy-bg-secondary: #333;
     --default-rentmy-fontcolor-1: #333333;
     --default-rentmy-box-shadow-1: 0 10px 30px 0 rgba(69, 69, 70, 0.08);
-}
-
-.dropInCart{
-    animation: dropInCart 0.5s ease;
-}
-@keyframes dropInCart {
-    0% {
-        opacity: 1;
-    }
-    
-    100% {
-        opacity: 0;
-    }
 }
